--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">= 7.4"
+        "php": ">= 7.4",
+        "egulias/email-validator": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
