--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,3 +29,16 @@ jobs:
                 with:
                     entrypoint: /composer/vendor/bin/phpstan
                     args: analyze --no-progress
+
+    php-cs-fixer:
+        name: PHP-CS-Fixer
+        runs-on: 'ubuntu-latest'
+
+        steps:
+            -   name: Checkout code
+                uses: actions/checkout@v2
+
+            -   name: PHP-CS-Fixer
+                uses: docker://oskarstark/php-cs-fixer-ga:2.18.2
+                with:
+                    args: --dry-run --diff-format udiff
