--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,4 @@ jobs:
                 uses: actions/checkout@v2
 
             -   name: PHP-CS-Fixer
-                uses: docker://oskarstark/php-cs-fixer-ga:2.18.2
-                with:
-                    args: --dry-run --diff-format udiff
+                run: vendor/bin/php-cs-fixer --dry-run --diff-format udiff
