--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "egulias/email-validator": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
-        "phpstan/phpstan": "^0.12"
+        "friendsofphp/php-cs-fixer": "^2.18",
+        "phpstan/phpstan": "^0.12",
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
@@ -27,5 +28,8 @@
         }
     },
     "license": "MIT",
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "config": {
+        "sort-packages": true
+    }
 }
