--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,4 +39,4 @@ jobs:
                 uses: actions/checkout@v2
 
             -   name: PHP-CS-Fixer
-                run: vendor/bin/php-cs-fixer --dry-run --diff-format udiff
+                run: vendor/bin/php-cs-fixer fix src --dry-run --diff-format udiff
